--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -86,7 +86,16 @@ data.addRows([
 [new Date(2022,2,30,10,15,0),645.07],
 [new Date(2022,2,30,10,30,0),650.11],
 [new Date(2022,2,30,10,45,0),645.91],
-[new Date(2022,2,30,10,45,0),645.91]
+[new Date(2022,2,30,11,0,0),648.69],
+[new Date(2022,2,30,11,15,0),650.86],
+[new Date(2022,2,30,11,30,0),647.69],
+[new Date(2022,2,30,11,45,0),647.76],
+[new Date(2022,2,30,12,0,0),648.75],
+[new Date(2022,2,30,12,15,0),650.78],
+[new Date(2022,2,30,12,30,0),649.69],
+[new Date(2022,2,30,12,45,0),647.69],
+[new Date(2022,2,30,13,0,0),647.43],
+[new Date(2022,2,30,13,0,0),647.43]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -139,8 +148,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">648.7</td>
-<td id="latest-date" class = "leftTextAlign">30 March 2022 11:00</td>
+<td id="latest-index">653.9</td>
+<td id="latest-date" class = "leftTextAlign">30 March 2022 13:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
