--- a/TEST.HTML
+++ b/TEST.HTML
@@ -1,89 +1,7 @@
-<!DOCTYPE html>
 <html>
-<base href="https://davidcapit.github.io/">
-<link rel="stylesheet" href="main.145456b46ef7e7825657.css">
 <head>
-<!-- Fonts -->
-<link rel="dns-prefetch" href="https://fonts.gstatic.com/">
-<link href="/css" rel="stylesheet">
 </head>
 <body>
-<div id="app" class="d-flex flex-column h-100">
-<main class=" h-100">
-<div class="container h-100">
-<table class="issue-price-matrix">
-<thead>
-<tr>
-<th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2-years</th>
-<th class="cap-duration">3-years</th>
-<th class="cap-duration">4-years</th>
-<th class="cap-duration">5-years</th>
-<th class="cap-duration">10-years</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="cap-rate-2">2%</td>
-<td class="cap-rate-2">
-<span id="myText1">£10,500</span>
-</td>
-<td class="cap-rate-2">
-<span id="myText2">£17,400</span>
-</td>
-<td class="cap-rate-2">
-<span id="myText3">£24,600</span>
-</td>
-<td class="cap-rate-2">
-<span id="myText4">£32,300</span>
-</td>
-<td class="cap-rate-2">
-<span id="myText5">£72,600</span>
-</td>
-</tr>
-<tr>
-<td class="cap-rate-3">3%</td>
-<td class="cap-rate-3">
-<span id="myText6">£6,100</span>
-</td>
-<td class="cap-rate-3">
-<span id="myText7">£9,800</span>
-</td>
-<td class="cap-rate-3">
-<span id="myText8">£13,600</span>
-</td>
-<td class="cap-rate-3">
-<span id="myText9">£18,000</span>
-</td>
-<td class="cap-rate-3">
-<span id="myText10">£43,500</span>
-</td>
-</tr>
-<tr>
-<td class="cap-rate-4">4%</td>
-<td class="cap-rate-4">
-<span id="myText11">£4,600</span>
-</td>
-<td class="cap-rate-4">
-<span id="myText12">£6,700</span>
-</td>
-<td class="cap-rate-4">
-<span id="myText13">£9,100</span>
-</td>
-<td class="cap-rate-4">
-<span id="myText14">£11,700</span>
-</td>
-<td class="cap-rate-4">
-<span id="myText15">£10,500</span>
-</td>
-</tr>
-</tbody>
-</table>
-<div>
-<p style="text-align: center;">Last updated: 18 February 2022 at 11:15 UK time</p>
-</div>
-</div>
-</main>
-</div>
+<iframe src="https://www.capit.co.uk/uploads/webpages/navbar/Cap-It-navbar.html" scrolling="no"></iframe>
 </body>
 </html>
